; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_rc_markdown.c_Init_redcarpet.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_rc_markdown.c_Init_redcarpet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"Redcarpet\00", align 1
@rb_mRedcarpet = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"Markdown\00", align 1
@rb_cObject = common dso_local global i32 0, align 4
@rb_cMarkdown = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c"new\00", align 1
@rb_redcarpet_md__new = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"render\00", align 1
@rb_redcarpet_md_render = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Init_redcarpet() #0 {
  %1 = call i32 @rb_define_module(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store i32 %1, i32* @rb_mRedcarpet, align 4
  %2 = load i32, i32* @rb_mRedcarpet, align 4
  %3 = load i32, i32* @rb_cObject, align 4
  %4 = call i32 @rb_define_class_under(i32 %2, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %3)
  store i32 %4, i32* @rb_cMarkdown, align 4
  %5 = load i32, i32* @rb_cMarkdown, align 4
  %6 = load i32, i32* @rb_redcarpet_md__new, align 4
  %7 = call i32 @rb_define_singleton_method(i32 %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %6, i32 -1)
  %8 = load i32, i32* @rb_cMarkdown, align 4
  %9 = load i32, i32* @rb_redcarpet_md_render, align 4
  %10 = call i32 @rb_define_method(i32 %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %9, i32 1)
  %11 = call i32 (...) @Init_redcarpet_rndr()
  ret void
}

declare dso_local i32 @rb_define_module(i8*) #1

declare dso_local i32 @rb_define_class_under(i32, i8*, i32) #1

declare dso_local i32 @rb_define_singleton_method(i32, i8*, i32, i32) #1

declare dso_local i32 @rb_define_method(i32, i8*, i32, i32) #1

declare dso_local i32 @Init_redcarpet_rndr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
